회원탈퇴 update usersDelete 에서 delete Users 로 변경, 탐정페이지 배너 관리페이지 개발중

--- a/src/main/resources/templates/admin/banner/detectivepage/list.html
+++ b/src/main/resources/templates/admin/banner/detectivepage/list.html
@@ -5,9 +5,9 @@
 
 <th:block layout:fragment="content">
     <th:block th:replace="admin/fragments/aside :: asideFragment"></th:block>
-    <main id="main" class="main-list" data-category="mainbanner">
+    <main id="main" class="main-list" data-category="detectivebanner">
         <section class="section section-users">
-            <h2 class="section_title">배너 관리</h2>
+            <h2 class="section_title">탐정찾기 페이지 관리</h2>
             <div class="table"> 
                <div class="table__top">
                    <div class="top-wrap">
