[관리자] 지역 잠금 기능 추가

--- a/src/main/resources/templates/admin/fragments/config.html
+++ b/src/main/resources/templates/admin/fragments/config.html
@@ -18,6 +18,7 @@
         <meta property="og:locale" content="ko_KR">
         <link rel="stylesheet" th:href="@{/assets/css/admin/main.css}">
         <link rel="stylesheet" th:href="@{/assets/css/admin/banner.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/admin/price.css}">
         <link rel="stylesheet" th:href="@{/assets/css/chatting/roomdetail.css}">
         <script defer th:src="@{/assets/js/admin/common.js}"></script>
         <script defer th:src="@{/assets/js/admin/layout.js}"></script>
