--- a/src/main/resources/templates/admin/board/report/list.html
+++ b/src/main/resources/templates/admin/board/report/list.html
@@ -22,13 +22,13 @@
                                 </div>
                                 <div class="filter-check">
                                     <input type="radio" id="filter02" name="state" value="0" th:checked="${state} eq 0">
-                                    <label for="filter02">대기</label>
+                                    <label for="filter02">미처리</label>
                                 </div>
                                 <div class="filter-check">
                                     <input type="radio" id="filter03" name="state" value="1" th:checked="${state} eq 1">
                                     <label for="filter03">처리</label>
                                 </div>
-                                <button type="submit" class="btn-prime check-btn">검색</button>
+                                <!-- <button type="submit" class="btn-prime check-btn">검색</button> -->
                             </form>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                         <th>업체명</th>
                         <th>신고자</th>
                         <th class="w-550">내용</th>
-                        <th>상태</th>
+                        <th>처리상태</th>
                         <th>신고처리일</th>
                         <th>신고일</th>
                     </tr>
@@ -131,7 +131,7 @@
                                 <td class="modal-td r-date"></td>
                             </tr>
                             <tr>
-                                <td class="modal-th">처리일</td>
+                                <td class="modal-th">처리상태</td>
                                 <td class="modal-td r-state"></td>
                             </tr>
                             <tr>
@@ -163,6 +163,7 @@
             pageOn();
             listCheck();
             reportDetailsModal();
+            onChangeReportProcess();
             new Table(document.querySelector('#main table'));
 
             // 신고 삭제
