배너 오류 수정중

--- a/src/main/resources/templates/admin/banner/list.html
+++ b/src/main/resources/templates/admin/banner/list.html
@@ -38,6 +38,7 @@
                <div class="table__action">
                    <button type="button" class="btn-normal banner-add-item">배너 추가하기</button>
                    <button type="button" class="btn-normal banner-update-btn">등록하기</button>
+                   <button type="button" class="btn-normal testBtn">현재 배너 요소 개수</button>
                </div>
            </div>
        </section>
@@ -58,6 +59,14 @@
         IsShowbannerInputFileRemove();
         bannerUpdate();
     });
+</script>
+<script>    
+    const testBtn = document.querySelector(".testBtn");
+    testBtn.addEventListener("click", () => {
+        const bannerRows = document.querySelectorAll(".bannerRows");
+        alert(bannerRows.length);
+    })
+
 </script>
 </th:block>
 
