서비스 계약시 requestForm 의 requestFormStatus 계약진행 으로 변경하는 기능 추가

--- a/src/main/resources/templates/admin/banner/list.html
+++ b/src/main/resources/templates/admin/banner/list.html
@@ -26,9 +26,7 @@
                                             <br/>
                                             <input type="text" class="bannerHrefInput" th:value="${item.bannerHref}"/>
                                         </td>
-                                        <td class="bannerCellRemove">
-                                            삭제
-                                        </td>                                     
+                                        <td class="bannerCellRemove" onclick="bannerRemoveItem()">삭제</td>                                     
                                     </tr>                              
                                </tbody>
                            </table>
@@ -53,7 +51,7 @@
         pageOn();
         // listCheck();
         bannerAddItem();
-        bannerRemoveItem();
+        // bannerRemoveItem();
         // bannerInputFile();
         bannerInputFileRemove();
         IsShowbannerInputFileRemove();
