--- a/src/main/resources/templates/admin/banner/detectivepage/list.html
+++ b/src/main/resources/templates/admin/banner/detectivepage/list.html
@@ -7,7 +7,7 @@
     <th:block th:replace="admin/fragments/aside :: asideFragment"></th:block>
     <main id="main" class="main-list" data-category="detectivebanner">
         <section class="section section-users">
-            <h2 class="section_title">탐정찾기 페이지 관리</h2>
+            <h2 class="section_title">탐정찾기 페이지 배너 관리</h2>
             <div class="table"> 
                <div class="table__top">
                    <div class="top-wrap">
@@ -26,9 +26,7 @@
                                             <br/>
                                             <input type="text" class="bannerHrefInput" th:value="${item.bannerHref}"/>
                                         </td>
-                                        <td class="bannerCellRemove">
-                                            삭제
-                                        </td>                                     
+                                        <td th:id="${item.idx}" class="bannerCellRemove" onclick="bannerRemoveItem(this)">삭제</td>                                   
                                     </tr>                              
                                </tbody>
                            </table>
@@ -52,7 +50,7 @@
         pageOn();
         // listCheck();
         bannerAddItem();
-        bannerRemoveItem();
+        // bannerRemoveItem();
         // bannerInputFile();
         bannerInputFileRemove();
         IsShowbannerInputFileRemove();
