[관리자] 업무분야 아이콘 변경 적용중

--- a/src/main/resources/templates/admin/company/premium.html
+++ b/src/main/resources/templates/admin/company/premium.html
@@ -14,7 +14,7 @@
                 <div class="table__top">
                     <div class="top-wrap">
                         <div class="form-tab">
-                            <button class="btn tab-menu premium on" th:onclick="|goTo('/admin/manage/company/premium')|">프리미엄</button>
+                            <button class="btn tab-menu premium on" th:onclick="|goTo('/admin/manage/company/premium')|">제휴협회</button>
                             <button class="btn tab-menu flag" th:onclick="|goTo('/admin/manage/company/flag')|">마패</button>
                         </div>
                         <div class="header-wrap">
