[관리자] 업무분야 아이콘 변경 적용중(2) 파일 미리보기 반영

--- a/src/main/resources/templates/admin/price/list.html
+++ b/src/main/resources/templates/admin/price/list.html
@@ -114,8 +114,7 @@
                             </td>
                             <td class="categoryIcon">
                                 <img class="categoryIconPreview" />
-                                <input type="file" />
-                                <span>지우기</span>
+                                <input class="categoryIconInputFile" type="file" />
                             </td>
                         </tr>
                         </tbody>
@@ -144,6 +143,7 @@
 
             removeCategoryItem();
             addCategoryItem();
+            categoryIconInputFileChange();
             modifyCategory();
         });
     </script>
