[관리자] 업무분야 아이콘 변경 적용중(3) 분야 추가 버튼으로 추가된 요소에서 파일 미리보기 작동안함

--- a/src/main/resources/templates/admin/price/list.html
+++ b/src/main/resources/templates/admin/price/list.html
@@ -113,7 +113,7 @@
                                 <input class="categoryPriceValue" type="text" th:value="${categorylist.categoryPrice}"/>
                             </td>
                             <td class="categoryIcon">
-                                <img class="categoryIconPreview" />
+                                <img class="categoryIconPreview" th:src="${categorylist.categoryIcon}" />
                                 <input class="categoryIconInputFile" type="file" />
                             </td>
                         </tr>
