--- a/src/main/resources/templates/admin/company/flag.html
+++ b/src/main/resources/templates/admin/company/flag.html
@@ -14,7 +14,7 @@
                 <div class="table__top">
                     <div class="top-wrap">
                         <div class="form-tab">
-                            <button class="btn tab-menu premium" th:onclick="|goTo('/admin/manage/company/premium')|">프리미엄</button>
+                            <button class="btn tab-menu premium" th:onclick="|goTo('/admin/manage/company/premium')|">제휴협회</button>
                             <button class="btn tab-menu flag on" th:onclick="|goTo('/admin/manage/company/flag')|">마패</button>
                         </div>
                         <div class="header-wrap">
@@ -55,7 +55,7 @@
                     <tbody th:if="${count} eq 0">
                     <tr>
                         <td colspan="9">
-                            <span>등록된 프리미엄이 없습니다.</span>
+                            <span>등록된 제휴협회가 없습니다.</span>
                         </td>
                     </tr>
                     </tbody>
