--- a/src/main/resources/templates/admin/company/list.html
+++ b/src/main/resources/templates/admin/company/list.html
@@ -44,7 +44,7 @@
                         <th th:if="${enabled} eq 1">안심번호</th>
                         <th class="width-250">분야</th>
                         <th class="width-250">지역</th>
-                        <th th:if="${enabled} eq 1" class="width-90">프리미엄</th>
+                        <th th:if="${enabled} eq 1" class="width-90">제휴협회</th>
                         <th th:if="${enabled} eq 1" class="width-90">마패</th>
                         <th>등록일</th>
                     </tr>
