--- a/src/main/resources/templates/admin/company/premium.html
+++ b/src/main/resources/templates/admin/company/premium.html
@@ -54,7 +54,7 @@
                     <tbody th:if="${count} eq 0">
                     <tr>
                         <td colspan="7">
-                            <span>등록된 프리미엄이 없습니다.</span>
+                            <span>등록된 제휴협회가 없습니다.</span>
                         </td>
                     </tr>
                     </tbody>
